Used react bootstrap icon library instead of fontawesome icon library for footer. Made padding/margin changes to ensure full page layout, instead of using css to hide overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-body {
-  overflow: hidden;
-}
-
 #light {
   background-color: white;
 }
